--- a/Mockups/V2_Parallax_SVG/crdIndex.html
+++ b/Mockups/V2_Parallax_SVG/crdIndex.html
@@ -4,7 +4,7 @@
 
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="sweet-justice.min.js"></script>
+	<script src=".min.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -154,25 +154,25 @@
 				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
 			</div>
 
-			<div class="column sweet-justice">
+			<div class="column ">
 				<h4>Introduction</h4>
 				<span id="aboutPerson"></span>
 			</div>
 			
-			<div id="col2" class="column sweet-justice">
+			<div id="col2" class="column ">
 				<h4>Quotes</h4>
 				<span id="quotes"></span>
 				<h4>Connections</h4>
 				<span id="connections"></span>
 			</div>
 
-			<div id="col3" class="column sweet-justice">
+			<div id="col3" class="column ">
 				<h4>Key Publications</h4>
 				<span id="publications"></span>
 				<h4>Reference</h4>
 				
 			</div>
-			<div class="column sweet-justice" id="col4">
+			<div class="column " id="col4">
 				<span class="name hovered" id="close"><img src="materials/arrow.png"></span>
 				<span id="globe">
 					<img src="">
