--- a/Mockups/V2_Parallax_SVG/resources.html
+++ b/Mockups/V2_Parallax_SVG/resources.html
@@ -24,7 +24,7 @@
 			
 			
 			<li><a href="#" id="about">about</li>
-			<li><a href="#" id="glossary">glossary</li>
+			<li><a href="glossary.html" id="glossary">glossary</li>
 			<li><a href="resources.html" id="resources">resources</li>
 			<li><a href="crdIndex.html" id="index">index</li>
 
