--- a/Mockups/V2_Parallax_SVG/index.html
+++ b/Mockups/V2_Parallax_SVG/index.html
@@ -21,7 +21,7 @@
 <body>
 
 	<nav class="shadow_bottom">
-		<h1><a href="#" id="title">DiPi History Project</a></h1>
+		<h1><a href="#" id="title">Participatory Design</a></h1>
 		<ul>
 			
 			<li><a href="#" id="about">about</li>
@@ -43,7 +43,7 @@
 	<div id="content">
 
 		<div id="intro" class="parallaxSec">	
-			<h1>PARTICIPATORY DESIGN</h1>	
+			<h1>EVOLUTION OF PARTICIPATORY DESIGN: 5 disciplines, 50 years</h1>	
 			<div id="introText"> 
 				<div class="column ">
 				DiPi History project is a joint effort between researchers, practitioners, and students to explore the evolution of participatory approaches overtime. A participatory approach is one in which everyone who has a stake in the intervention has a voice and influence through collaboration with practitioners and researchers. Under the collaborative effort, we investigated who and what have contributed to the evolution of participatory approaches overtime. Based on the research, we made a timeline that identifies key individuals, organizations, projects, and social events that influence the evolution of participatory approaches across five different fields. The fields include community design, youth development, international development, public health, and technology development.
