--- a/Mockups/V2_Parallax_SVG/resources.html
+++ b/Mockups/V2_Parallax_SVG/resources.html
@@ -10,7 +10,8 @@
 	<title>Resources</title>
 	<link rel="stylesheet" type="text/css" href="resources.css">
 
-	<script type="text/javascript" src="resources.js"></script>
+	<!-- This is to implement the navigation animations -->
+	<script type="text/javascript" src="crdIndex.js"></script>
 
 
 	<meta charset="utf-8"> 
