--- a/Mockups/V2_Parallax_SVG/about.html
+++ b/Mockups/V2_Parallax_SVG/about.html
@@ -8,6 +8,19 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="crdIndex.js"></script>
+
+	// <script type="text/javascript">
+	// console.log("loaded!");
+	// 	$('.navLinks a').hover(function(){
+	// 		console.log("hover")
+	// 	var id = $(this).attr('id');
+	// 	$("#"+id).css({"color":"#ED1C25"});
+	// }, function(){
+	// 	var id = $(this).attr('id');
+	// 	$("#"+id).css({"color":"white"});
+	// })
+	// </script>
 	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="about.css">
 
@@ -20,11 +33,12 @@
 	<nav>
 		<h1><a href="#" id="title">About</a></h1>
 		<ul>
-			
-			<li><a href="about.html" id="about">about</li>
-			<li><a href="glossary.html" id="glossary">glossary</li>
-			<li><a href="resources.html" id="resources">resources</li>
-			<li><a href="crdIndex.html" id="index">index</li>
+			<span class="navLinks">
+			<li><a href="about.html" id="about">about</a></li>
+			<li><a href="glossary.html" id="glossary">glossary</a></li>
+			<li><a href="resources.html" id="resources">resources</a></li>
+			<li><a href="crdIndex.html" id="index">index</a></li>
+			</span>
 
 			<li></li>
 			<li></li>
@@ -111,7 +125,7 @@
        					</div>
        				</div>
        				<div class="individual">
-       					<img src="">
+       					<img src="images/about_page_sumayyah_pic.jpg">
        					<div class="description">
 
        						<h6>Sumayyah Ahmed</h6>
