--- a/Mockups/V2_Parallax_SVG/crdIndex.html
+++ b/Mockups/V2_Parallax_SVG/crdIndex.html
@@ -23,10 +23,10 @@
 		<h1><a href="#" id="title">Index</a></h1>
 		<ul>
 			
-			<li><a href="#" id="about">about</li>
-			<li><a href="glossary.html" id="glossary">glossary</li>
-			<li><a href="resources.html" id="resources">resources</li>
-			<li><a href="crdIndex.html" id="index">index</li>
+			<li><a href="#" id="about">about</a></li>
+			<li><a href="glossary.html" id="glossary">glossary</a></li>
+			<li><a href="resources.html" id="resources">resources</a></li>
+			<li><a href="crdIndex.html" id="index">index</a></li>
 
 			<li></li>
 			<li></li>
