--- a/Mockups/V2_Parallax_SVG/glossary.html
+++ b/Mockups/V2_Parallax_SVG/glossary.html
@@ -11,6 +11,10 @@
 	<title>Glossary</title>
 	<link rel="stylesheet" type="text/css" href="glossary.css">
 
+    <!-- This is to implement the navigation animations -->
+    <script type="text/javascript" src="crdIndex.js"></script>
+
+
 
 	<meta charset="utf-8"> 
 </head>
@@ -21,7 +25,7 @@
 		<h1><a href="#" id="title">Glossary</a></h1>
 		<ul>
 			
-			<li><a href="#" id="about">about</li>
+			<li><a href="about.html" id="about">about</li>
 			<li><a href="glossary.html" id="glossary">glossary</li>
 			<li><a href="resources.html" id="resources">resources</li>
 			<li><a href="crdIndex.html" id="index">index</li>
