Changed about and resources pages UI

--- a/Mockups/V2_Parallax_SVG/resources.html
+++ b/Mockups/V2_Parallax_SVG/resources.html
@@ -12,6 +12,7 @@
 
 	<!-- This is to implement the navigation animations -->
 	<script type="text/javascript" src="crdIndex.js"></script>
+	<script type="text/javascript" src="resourcesAnim.js"></script>
 
 
 	<meta charset="utf-8"> 
@@ -24,7 +25,7 @@
 		<ul>
 			
 			
-			<li><a href="#" id="about">about</li>
+			<li><a href="about.html" id="about">about</li>
 			<li><a href="glossary.html" id="glossary">glossary</li>
 			<li><a href="resources.html" id="resources">resources</li>
 			<li><a href="crdIndex.html" id="index">index</li>
@@ -40,33 +41,152 @@
 	<section id="wrapper">
 		<div id="content">
 
-			<h1 class="section">poster</h1>
+			<div class="column">
+
+			<h2 class="alphaheader">POSTERS</h2>
 
 				<ul>
-					<li><a href="file:///C:\Users\Sumayyah\Documents\GitHub\DiPi-Dataviz\Mockups\ParallaxV1\images\community_design.png" download><img src="materials/poster_screenshot_thumbnail.png" ></a></li>
-					<li><img src="materials/poster_screenshot_thumbnail.png"></li>
-					<li><img src="materials/poster_screenshot_thumbnail.png"></li>
+					<li>
+						<div class="downloadable">
+							<img src="images/resources_poster_crop.jpg">
+							<img src="images/resources_poster_hover.png" class="overlay">
+
+								<span class="detailText">
+									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+
+						</div>
+					</li>
+					<li>
+						<div class="downloadable">
+							<img src="images/resources_poster_crop.jpg">
+							<img src="images/resources_poster_hover.png" class="overlay">
+							<span class="detailText">
+									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+						</div>
+					</li>
+					<li>
+						<div class="downloadable">
+							<img src="images/resources_poster_crop.jpg">
+							<img src="images/resources_poster_hover.png" class="overlay">
+							<span class="detailText">
+									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+						</div>
+					</li>
+					<li>
+						<div class="downloadable">
+							<img src="images/resources_poster_crop.jpg">
+							<img src="images/resources_poster_hover.png" class="overlay">
+							<span class="detailText">
+									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+						</div>
+					</li>
 
 				</ul>
 
 			<hr class="separator">
-			<h1 class="section">data</h1>
+
+			<h2 class="alphaheader">DATA</h2>
 				<ul>
-					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
-					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
-					<li><img src="materials/sublime_screenshot_thumbnail.png"></li>
+					<li>
+						<div class="downloadable">
+							<img src="images/resources_data1_crop.jpg">
+							<img src="images/resources_poster_hover.png" class="overlay">
+							<span class="detailText">
+									<h4>SVG of Timeline</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+						</div>
+					</li>
+					<li>
+						<div class="downloadable">
+							<img src="images/resources_data2_crop.jpg">
+							<img src="images/resources_poster_hover.png" class="overlay">
+							<span class="detailText">
+									<h4>Javascript</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+						</div>
+					</li>
+					<li>
+						<div class="downloadable">
+							<img src="images/resources_data1_crop.jpg">
+							<img src="images/resources_poster_hover.png" class="overlay">
+							<span class="detailText">
+									<h4>SVG of Timeline<</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+						</div>
+					</li>
+					<li>
+						<div class="downloadable">
+							<img src="images/resources_data2_crop.jpg">
+							<img src="images/resources_poster_hover.png" class="overlay">
+							<span class="detailText">
+									<h4>Javascript</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+						</div>
+					</li>
 				</ul>
+
 			<hr class="separator">
-			<h1 class="section">publications</h1>
-			Alinsky, S. D. (1972). Rules for radicals: A primer for realistic radicals.  
-An Architektur. (2008). Community Design. Involvement and Architecture in the US since 1963. Projects  
-An Architektur. (2008). Community Design. Involvement and Architecture in the US since 1963. Public Interview
-Arnstein, S. R. (1969). A ladder of citizen participation. Journal of the American Institute of planners, 35(4), 216-224. 
-Atwood, J. B. (1993, November). Statement of principles on participatory development. In Washington, DC: Address presented at Academy for Educational Development, USAID Forum on Participatory Development, November (Vol. 16).   
-Bjerknes, G., Ehn, P., & Kyng, M. (1987). Computers and democracy-a Scandinavian challenge. Gower Publishing Ltd.  
-Bødker, et al (2000, October). Co-operative Design—perspectives on 20 years with ‘the Scandinavian IT Design Model’. In Proceedings of NordiCHI (Vol. 2000, pp. 22-24). University of Notre Dame.
-Bødker, S. (1996). Creating conditions for participation: Conflicts and resources in systems development. Human-computer interaction, 11(3), 215-236. 
-Bornstein, D. (1996). The price of a dream. The story of the Grameen Bank and the idea that is helping the poor to change their lives.  
+
+			<h2 class="alphaheader">PUBLICATIONS</h2>
+
+			<span id="publications">
+				Alinsky, S. D. (1972). Rules for radicals: A primer for realistic radicals.  <br>
+An Architektur. (2008). Community Design. Involvement and Architecture in the US since 1963. <br>Projects  
+An Architektur. (2008). Community Design. Involvement and Architecture in the US since 1963. <br>Public Interview
+Arnstein, S. R. (1969). A ladder of citizen participation. Journal of the American Institute of planners, 35(4), 216-224. <br>
+Atwood, J. B. (1993, November). Statement of principles on participatory development. In Washington, DC: Address presented at Academy for Educational Development, USAID Forum on Participatory Development, November (Vol. 16).  <br> 
+Bjerknes, G., Ehn, P., & Kyng, M. (1987). Computers and democracy-a Scandinavian challenge. Gower Publishing Ltd.  <br>
+Bødker, et al (2000, October). Co-operative Design—perspectives on 20 years with ‘the Scandinavian IT Design Model’. In Proceedings of NordiCHI (Vol. 2000, pp. 22-24). University of Notre Dame.<br>
+Bødker, S. (1996). Creating conditions for participation: Conflicts and resources in systems development. Human-computer interaction, 11(3), 215-236. <br>
+Bornstein, D. (1996). The price of a dream. The story of the Grameen Bank and the idea that is helping the poor to change their lives.  <br>
+
+Alinsky, S. D. (1972). Rules for radicals: A primer for realistic radicals.  <br>
+An Architektur. (2008). Community Design. Involvement and Architecture in the US since 1963. <br>Projects  
+An Architektur. (2008). Community Design. Involvement and Architecture in the US since 1963. <br>Public Interview
+Arnstein, S. R. (1969). A ladder of citizen participation. Journal of the American Institute of planners, 35(4), 216-224. <br>
+Atwood, J. B. (1993, November). Statement of principles on participatory development. In Washington, DC: Address presented at Academy for Educational Development, USAID Forum on Participatory Development, November (Vol. 16).  <br> 
+Bjerknes, G., Ehn, P., & Kyng, M. (1987). Computers and democracy-a Scandinavian challenge. Gower Publishing Ltd.  <br>
+Bødker, et al (2000, October). Co-operative Design—perspectives on 20 years with ‘the Scandinavian IT Design Model’. In Proceedings of NordiCHI (Vol. 2000, pp. 22-24). University of Notre Dame.<br>
+Bødker, S. (1996). Creating conditions for participation: Conflicts and resources in systems development. Human-computer interaction, 11(3), 215-236. <br>
+Bornstein, D. (1996). The price of a dream. The story of the Grameen Bank and the idea that is helping the poor to change their lives.  </span>
+
+			</div>
+			<div class="column_sm">
+
+				<h5>All resource materials are licensed under Creative Commons Attribution NonCommercial-ShareAlike 4.0 International License</h5>
+
+				<h5>What does it mean?</h5>
+				<p>Share: copy and redistribute the material in any medium or format</p>
+			
+				<p>Adapt: remix, transform, and build upon the material</p>
+				
+				<p>The licensor cannot revoke these freedoms as long as you follow the license terms. </p>
+
+				<img src="images/resources_cc_icon.png"> Creative Commons Icon
+				<img src="images/resources_attribution_icon.png">Attribution — You must give appropriate
+1980s to 2000s
+credit, provide a link to the license, and indicate if changes were made.<br>
+				<img src="images/resources_noncomm_icon.png">NonCommercial — You may not use the material for commercial purposes.<br>
+				<img src="images/resources_remix_icon.png">ShareAlike - If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.<br>
+
+				<p>For more information about licenses: <a href="http://creativecommons.org" target="blank">http://creativecommons.org</a></p>
+				<!-- <ul>
+					<li><a class="name hovered" >View by A-Z order</a></li>
+					<li><a class="name hovered" >View by Category</a></li>
+				</ul>  -->
+			</div>
 				
 		</div>
 
