--- a/Mockups/V2_Parallax_SVG/crdIndex_categorized.html
+++ b/Mockups/V2_Parallax_SVG/crdIndex_categorized.html
@@ -179,10 +179,9 @@
                 </span>
             </div>      
         </div>
-<!-- 		<footer>
-			Copyright 2014
-		</footer> -->	
-	
+    <footer>
+        <img src="images/resources_cc_sticker.png">
+    </footer>
 	</section>
 
 
