--- a/Mockups/V2_Parallax_SVG/glossary.html
+++ b/Mockups/V2_Parallax_SVG/glossary.html
@@ -186,7 +186,9 @@ earth's surface.
 			</section>
 		</div>
 
-
+    <footer>
+        <img src="images/resources_cc_sticker.png">
+    </footer>
 	</section>
 
 
