--- a/Mockups/V2_Parallax_SVG/resources.html
+++ b/Mockups/V2_Parallax_SVG/resources.html
@@ -47,7 +47,7 @@
 
 				<ul>
 					<li>
-						<div class="downloadable">
+						<div class="downloadable active">
 							<img src="images/resources_poster_crop.jpg">
 							<img src="images/resources_poster_hover.png" class="overlay">
 
@@ -59,8 +59,18 @@
 						</div>
 					</li>
 					<li>
-						<div class="downloadable">
-							<img src="images/resources_poster_crop.jpg">
+						<div class="downloadable active">
+							<img src="images/resources_poster_crop.jpg" class="active">
+							<img src="images/resources_poster_hover.png" class="overlay">
+							<span class="detailText">
+									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+								</span>
+						</div>
+					</li>
+					<li>
+						<div class="downloadable active">
+							<img src="images/resources_poster_crop.jpg" class="active">
 							<img src="images/resources_poster_hover.png" class="overlay">
 							<span class="detailText">
 									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
@@ -70,17 +80,7 @@
 					</li>
 					<li>
 						<div class="downloadable">
-							<img src="images/resources_poster_crop.jpg">
-							<img src="images/resources_poster_hover.png" class="overlay">
-							<span class="detailText">
-									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-								</span>
-						</div>
-					</li>
-					<li>
-						<div class="downloadable">
-							<img src="images/resources_poster_crop.jpg">
+							<img src="images/blank_rect.png">
 							<img src="images/resources_poster_hover.png" class="overlay">
 							<span class="detailText">
 									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
@@ -96,7 +96,7 @@
 			<h2 class="alphaheader">DATA</h2>
 				<ul>
 					<li>
-						<div class="downloadable">
+						<div class="downloadable active">
 							<img src="images/resources_data1_crop.jpg">
 							<img src="images/resources_poster_hover.png" class="overlay">
 							<span class="detailText">
@@ -106,7 +106,7 @@
 						</div>
 					</li>
 					<li>
-						<div class="downloadable">
+						<div class="downloadable active">
 							<img src="images/resources_data2_crop.jpg">
 							<img src="images/resources_poster_hover.png" class="overlay">
 							<span class="detailText">
@@ -116,17 +116,17 @@
 						</div>
 					</li>
 					<li>
-						<div class="downloadable">
+						<div class="downloadable active">
 							<img src="images/resources_data1_crop.jpg">
 							<img src="images/resources_poster_hover.png" class="overlay">
 							<span class="detailText">
-									<h4>SVG of Timeline<</h4>
+									<h4>SVG of Timeline</h4>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 								</span>
 						</div>
 					</li>
 					<li>
-						<div class="downloadable">
+						<div class="downloadable active">
 							<img src="images/resources_data2_crop.jpg">
 							<img src="images/resources_poster_hover.png" class="overlay">
 							<span class="detailText">
@@ -139,7 +139,7 @@
 
 			<hr class="separator">
 
-			<h2 class="alphaheader">PUBLICATIONS</h2>
+			<h2 class="alphaheader">PUBLICATIONS & LINKS</h2>
 
 			<span id="publications">
 				Alinsky, S. D. (1972). Rules for radicals: A primer for realistic radicals.  <br>
@@ -174,27 +174,22 @@ Bornstein, D. (1996). The price of a dream. The story of the Grameen Bank and th
 				
 				<p>The licensor cannot revoke these freedoms as long as you follow the license terms. </p>
 
-				<img src="images/resources_cc_icon.png"> Creative Commons Icon
-				<img src="images/resources_attribution_icon.png">Attribution — You must give appropriate
-1980s to 2000s
-credit, provide a link to the license, and indicate if changes were made.<br>
-				<img src="images/resources_noncomm_icon.png">NonCommercial — You may not use the material for commercial purposes.<br>
-				<img src="images/resources_remix_icon.png">ShareAlike - If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.<br>
+				<img src="images/resources_cc_icon.png"><p>Creative Commons Icon</p><br>
+				<img src="images/resources_attribution_icon.png"><p>Attribution — You must give appropriate 1980s to 2000scredit, provide a link to the license, and indicate if changes were made.MIG Inc.</p><br>
+				<img src="images/resources_noncomm_icon.png"><p>1980s to Present Noncommercial — You may not use the material for commercial purposes.</p><br>
+				<img src="images/resources_remix_icon.png"><p>ShareAlike — If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.</p><br>
 
 				<p>For more information about licenses: <a href="http://creativecommons.org" target="blank">http://creativecommons.org</a></p>
-				<!-- <ul>
-					<li><a class="name hovered" >View by A-Z order</a></li>
-					<li><a class="name hovered" >View by Category</a></li>
-				</ul>  -->
+
 			</div>
 				
 		</div>
 
 
 		
-<!-- 		<footer>
-			Copyright 2014
-		</footer> -->	
+	<footer>
+		<img src="images/resources_cc_sticker.png">
+	</footer>
 	
 	</section>
 </body>
