--- a/Mockups/V2_Parallax_SVG/index.html
+++ b/Mockups/V2_Parallax_SVG/index.html
@@ -21,7 +21,7 @@
 <body>
 
 	<nav class="shadow_bottom">
-		<h1><a href="#" id="title">Participatory Design</a></h1>
+		<h1><a href="#" id="title">What Does Democratic Design Look Like?</a></h1>
 		<ul>
 			
 			<span class="navLinks">
@@ -61,11 +61,12 @@
 		</div>
 		<div id="wrapper"><svg version="1.1" id="paper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="1301.52px" height="2107.834px" viewBox="0 0 1301.52 2107.834" enable-background="new 0 0 1301.52 2107.834"
-	 xml:space="preserve"></div>
+	 xml:space="preserve"></svg></div>
 		
-		</svg>
+		
 
 		<div id="popupDiv" class="parallaxSec shadow_top">
+
 			<div id="col1" class="column">
 				<h2 class="details name" id="name">Name</h2>
 				<h6 class="details" id="years">1960-1980</h6>
@@ -79,7 +80,7 @@
 			
 			<div id="col2" class="column ">
 				<h4>Quotes</h4>
-				<span id="quotes"></h4>
+				<span id="quotes"></span>
 				<span id="connections"></span>
 			</div>
 
@@ -94,11 +95,15 @@
 				<span id="globe">
 					<img src="">
 				</span>
-			</div>		
-		</div>
-			
+			</div>	
 
+		</div>
+	
 	</div>
+
+	<footer>
+		<img src="images/resources_cc_sticker.png">
+	</footer>
 	
 		
 
