--- a/Mockups/V2_Parallax_SVG/resources.html
+++ b/Mockups/V2_Parallax_SVG/resources.html
@@ -174,10 +174,10 @@ Bornstein, D. (1996). The price of a dream. The story of the Grameen Bank and th
 				
 				<p>The licensor cannot revoke these freedoms as long as you follow the license terms. </p>
 
-				<img src="images/resources_cc_icon.png"><p>Creative Commons Icon</p><br>
-				<img src="images/resources_attribution_icon.png"><p>Attribution — You must give appropriate 1980s to 2000scredit, provide a link to the license, and indicate if changes were made.MIG Inc.</p><br>
-				<img src="images/resources_noncomm_icon.png"><p>1980s to Present Noncommercial — You may not use the material for commercial purposes.</p><br>
-				<img src="images/resources_remix_icon.png"><p>ShareAlike — If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.</p><br>
+				<img src="images/resources_cc_icon.png"><!-- <p>Creative Commons Icon</p> --><br><br><br>
+				<img src="images/resources_attribution_icon.png"><!-- <p>Attribution — You must give appropriate 1980s to 2000scredit, provide a link to the license, and indicate if changes were made.MIG Inc.</p> --><br><br><br>
+				<img src="images/resources_noncomm_icon.png"><!-- <p>1980s to Present Noncommercial — You may not use the material for commercial purposes.</p> --><br><br><br>
+				<img src="images/resources_remix_icon.png"><!-- <p>ShareAlike — If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.</p> --><br><br><br>
 
 				<p>For more information about licenses: <a href="http://creativecommons.org" target="blank">http://creativecommons.org</a></p>
 
