Several UI changes
Resources downloads; footer; intro images

--- a/Mockups/V2_Parallax_SVG/about.html
+++ b/Mockups/V2_Parallax_SVG/about.html
@@ -155,9 +155,9 @@
 			</section>
 		</div>
 
-			<footer>
-		<img src="images/resources_cc_sticker.png">
-	</footer>
+		<footer>
+		  <img src="images/footer.png">
+	  </footer>
 
 
 	</section>
