--- a/Mockups/V2_Parallax_SVG/crdIndex_categorized.html
+++ b/Mockups/V2_Parallax_SVG/crdIndex_categorized.html
@@ -180,7 +180,7 @@
             </div>      
         </div>
     <footer>
-        <img src="images/resources_cc_sticker.png">
+        <img src="images/footer.png">
     </footer>
 	</section>
 
