--- a/Mockups/V2_Parallax_SVG/index.html
+++ b/Mockups/V2_Parallax_SVG/index.html
@@ -21,7 +21,11 @@
 <body>
 
 	<nav class="shadow_bottom">
-		<h1><a href="#" id="title">What Does Democratic Design Look Like?</a></h1>
+		<div id="titleContainer">
+			<h1><a href="#" id="title">What Does Democratic Design Look Like?</a></h1>
+			<img src="images/Homepage_logo_subtext.png">
+		</div>
+		
 		<ul>
 			
 			<span class="navLinks">
@@ -45,8 +49,8 @@
 	<div id="content">
 
 		<div id="intro" class="parallaxSec">
-			<div class="column"> 
-				<h1>EVOLUTION OF PARTICIPATORY PRACTICES: <br>5 disciplines, 50 years</h1>
+			<div class="column columnimg"> 
+				<img src="images/Homepage_logo.png">
 			</div>	
 				
 			<div id="introText"> 
@@ -102,7 +106,7 @@
 	</div>
 
 	<footer>
-		<img src="images/resources_cc_sticker.png">
+		<img src="images/footer.png">
 	</footer>
 	
 		
