--- a/Mockups/V2_Parallax_SVG/crdIndex.html
+++ b/Mockups/V2_Parallax_SVG/crdIndex.html
@@ -192,7 +192,7 @@
 			</div>		
 		</div>
 	<footer>
-		<img src="images/resources_cc_sticker.png">
+		<img src="images/footer.png">
 	</footer>
 	
 	</section>
