--- a/Mockups/V2_Parallax_SVG/glossary.html
+++ b/Mockups/V2_Parallax_SVG/glossary.html
@@ -187,7 +187,7 @@ earth's surface.
 		</div>
 
     <footer>
-        <img src="images/resources_cc_sticker.png">
+        <img src="images/footer.png">
     </footer>
 	</section>
 
