--- a/index.html
+++ b/index.html
@@ -1,64 +1,8 @@
-<!DOCTYPE html>
-
 <html>
-
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700' rel='stylesheet' type='text/css'>
-	<title>DiPi Portal</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<meta charset="utf-8"> 
+<meta http-equiv="refresh" content="0; url=http://cargocollective.com/dipi/" />
 </head>
-
 <body>
-
-	<div id="wrapper">
-
-	Hello!
-		
-
-	<ul>
-
-		<li>
-			<a href="#" class = "blue">
-				<h2>Title #1</h2>
-				<p>text content</p>
-			</a>
-		</li>
-		<li>
-			<a href="#" class = "green">
-				<h2>Title #2</h2>
-				<p>text content</p>
-			</a>
-		</li>
-		<li>
-			<a href="#" class = "yellow">
-				<h2>Title #3</h2>
-				<p>text content</p>
-			</a>
-		</li>
-		<li>
-			<a href="#" class = "blue">
-				<h2>Title #4</h2>
-				<p>text content</p>
-			</a>
-		</li>
-		<li>
-			<a href="#" class = "green">
-				<h2>Title #5</h2>
-				<p>text content</p>
-			</a>
-		</li>
-		<li>
-			<a href="#" class = "yellow">
-				<h2>Title #6</h2>
-				<p>text content</p>
-			</a>
-		</li>
-	</ul>
-
-
-	</div>
-
+Redirecting to http://cargocollective.com/dipi
 </body>
-
 </html>
