--- a/Mockups/V2_Parallax_SVG/index.html
+++ b/Mockups/V2_Parallax_SVG/index.html
@@ -46,7 +46,7 @@
 
 		<div id="intro" class="parallaxSec">
 			<div class="column"> 
-				<h1>EVOLUTION OF PARTICIPATORY PRACTICES: <br>5 disciplines, 50 years</h1>
+				<img src="images/Homepage_logo.png">
 			</div>	
 				
 			<div id="introText"> 
