Make pages static+ nav UI

--- a/Mockups/V3_Integrated/crdIndex.html
+++ b/Mockups/V3_Integrated/crdIndex.html
@@ -185,7 +185,7 @@
 				
 			</div>
 			<div class="column " id="col4">
-				<span class="name hovered" id="close"><img src="materials/arrow.png"></span>
+				<span class="name hovered" id="close"><img src="images/arrow.png"></span>
 				<span id="globe">
 					<img src="">
 				</span>
