--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -7,8 +7,6 @@
 	<script src="snap.svg-min.js"></script>
 	<script src=".min.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<title>DiPi Portal</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 
@@ -32,10 +30,13 @@
 				<li><a href="glossary.html" id="glossary">glossary</a></li>
 				<li><a href="resources.html" id="resources">resources</a></li>
 				<li><a href="crdIndex.html" id="index">index</a></li>
+
 			</span>
+
 
 			<li></li>
 			<li></li>
+			<li><div class="vertical-line"></div></li>
 			<li><a href="#" id="tech">technology</a></li>
 			<li><a href="#" id="health">health</a></li>
 			<li><a href="#" id="iDev">international</a></li>
@@ -49,7 +50,7 @@
 
 		<div id="intro" class="parallaxSec">
 
-			<div class="column columnimg"> 
+			<div class="columnimg"> 
 				<img src="images/Homepage_logo.png">
 			</div>	
 				
@@ -95,7 +96,7 @@
 				
 			</div>
 			<div class="column " id="col4">
-				<span class="name hovered" id="close"><img src="materials/arrow.png"></span>
+				<span class="name hovered" id="close"><img src="images/arrow.png"></span>
 				<span id="globe">
 					<img src="">
 				</span>
