--- a/Mockups/V3_Integrated/crdIndex_categorized.html
+++ b/Mockups/V3_Integrated/crdIndex_categorized.html
@@ -173,7 +173,7 @@
                 
             </div>
             <div class="column sweet-justice" id="col4">
-                <span class="name hovered" id="close"><img src="materials/arrow.png"></span>
+                <span class="name hovered" id="close"><img src="images/arrow.png"></span>
                 <span id="globe">
                     <img src="">
                 </span>
