Update homepage logo

--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -51,7 +51,7 @@
 		<div id="intro" class="parallaxSec">
 
 			<div class="columnimg"> 
-				<img src="images/Homepage_logo.png">
+				<img src="images/Homepage_logo_bigger.png">
 			</div>	
 				
 			<div id="introText"> 
@@ -107,6 +107,12 @@
 	</div>
 
 	<footer>
+		<div id="contact">
+			<ul>
+				<li>Contact <i>dipi@ucdavis.edu</i></li>
+				<li>Tweet <i>@ucdipi</i></li>
+			</ul>
+		</div>
 		<a href="http://cargocollective.com/dipi/" target = "_blank"><img src="images/footer.png"></a>
 	</footer>
 	
