Fixed column webkit + UI changes
Fixed Index page rollovers; popupdiv inconsistencies; implemented new
entities JSON file; text sizing issues

--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -51,7 +51,7 @@
 		<div id="intro" class="parallaxSec">
 
 			<div class="columnimg"> 
-				<img src="images/Homepage_logo2.png">
+				<img src="images/Homepage_logo_NEW.png">
 			</div>	
 				
 			<div id="introText"> 
@@ -86,6 +86,7 @@
 			<div id="col2" class="column ">
 				<h4>Quotes</h4>
 				<span id="quotes"></span>
+				<h4>Connections</h4>
 				<span id="connections"></span>
 			</div>
 
