--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -110,11 +110,17 @@
 	<footer>
 		<div id="contact">
 			<ul>
-				<li>Contact <i>dipi@ucdavis.edu</i></li>
-				<li>Tweet <i>@ucdipi</i></li>
+				<li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
+				<li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
 			</ul>
 		</div>
-		<a href="http://cargocollective.com/dipi/" target = "_blank"><img src="images/footer.png"></a>
+		<div id="dipiLinks">
+			<ul>
+				<li><a href="http://cargocollective.com/dipi/" target="blank"><img src="images/footer_dipi.png" ></a></li>
+				<li><a href="http://creativecommons.org" target="blank"><img src="images/footer_CCA.png"></a></li>
+			</ul>
+		</div>
+		<!-- <a href="http://cargocollective.com/dipi/" target = "_blank"><img src="images/footer.png"></a> -->
 	</footer>
 	
 		
