Fix resources page; update footers for each page

--- a/Mockups/V3_Integrated/glossary.html
+++ b/Mockups/V3_Integrated/glossary.html
@@ -185,9 +185,20 @@ earth's surface.
 			</div>		
 			</section>
 		</div>
-
     <footer>
-        <a href="http://cargocollective.com/dipi/" target = "_blank"><img src="images/footer.png"></a>
+        <div id="contact">
+            <ul>
+                <li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
+                <li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
+            </ul>
+        </div>
+        <div id="dipiLinks">
+            <ul>
+                <li><a href="http://cargocollective.com/dipi/" target="blank"><img src="images/footer_dipi.png" ></a></li>
+                <li><a href="http://creativecommons.org" target="blank"><img src="images/footer_CCA.png"></a></li>
+            </ul>
+        </div>
+
     </footer>
 	</section>
 
