--- a/Mockups/V3_Integrated/resources2.html
+++ b/Mockups/V3_Integrated/resources2.html
@@ -8,7 +8,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<title>Resources</title>
-	<link rel="stylesheet" type="text/css" href="resources.css">
+	<link rel="stylesheet" type="text/css" href="resources2.css">
 
 	<!-- This is to implement the navigation animations -->
 	<script type="text/javascript" src="crdIndex.js"></script>
@@ -157,19 +157,7 @@
 
 		
 	<footer>
-		<div id="contact">
-			<ul>
-				<li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
-				<li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
-			</ul>
-		</div>
-		<div id="dipiLinks">
-			<ul>
-				<li><a href="http://cargocollective.com/dipi/" target="blank"><img src="images/footer_dipi.png" ></a></li>
-				<li><a href="http://creativecommons.org" target="blank"><img src="images/footer_CCA.png"></a></li>
-			</ul>
-		</div>
-
+		<a href="http://cargocollective.com/dipi/" target = "_blank"><img src="images/footer.png"></a>
 	</footer>
 	
 	</section>
