--- a/Mockups/V3_Integrated/crdIndex_categorized.html
+++ b/Mockups/V3_Integrated/crdIndex_categorized.html
@@ -22,8 +22,8 @@
 		<h1><a href="#" id="title">Index</a></h1>
 		<ul>
 			
-			<li><a href="#" id="about">about</li>
-			<li><a href="#" id="glossary">glossary</li>
+			<li><a href="about.html" id="about">about</li>
+			<li><a href="glossary.html" id="glossary">glossary</li>
 			<li><a href="resources.html" id="resources">resources</li>
 			<li><a href="crdIndex.html" id="index">index</li>
 
@@ -182,7 +182,19 @@
                
         </div>
     <footer>
-        <a href="http://cargocollective.com/dipi/" target = "_blank"><img src="images/footer.png"></a>
+        <div id="contact">
+            <ul>
+                <li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
+                <li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
+            </ul>
+        </div>
+        <div id="dipiLinks">
+            <ul>
+                <li><a href="http://cargocollective.com/dipi/" target="blank"><img src="images/footer_dipi.png" ></a></li>
+                <li><a href="http://creativecommons.org" target="blank"><img src="images/footer_CCA.png"></a></li>
+            </ul>
+        </div>
+
     </footer>
 	</section>
 
