Finished resources page; UI changes to homepage
New intro text; fixed maps; new homepage logo

--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -51,15 +51,24 @@
 		<div id="intro" class="parallaxSec">
 
 			<div class="columnimg"> 
-				<img src="images/Homepage_logo_NEW.png">
+				<img src="images/Homepage_logo_12.1.14.png">
 			</div>	
 				
 			<div id="introText"> 
 				<div class="column ">
-				DiPi History project is a joint effort between researchers, practitioners, and students to explore the evolution of participatory approaches overtime. A participatory approach is one in which everyone who has a stake in the intervention has a voice and influence through collaboration with practitioners and researchers. Under the collaborative effort, we investigated who and what have contributed to the evolution of participatory approaches overtime. Based on the research, we made a timeline that identifies key individuals, organizations, projects, and social events that influence the evolution of participatory approaches across five different fields. The fields include community design, youth development, international development, public health, and technology development.
+				The Participatory Practices timeline project, sponsored by the UC Davis Center for Design in the Public Interest, is a joint effort between researchers, design practitioners, and students to explore the evolution of participatory practices across disciplines, beginning around the time of the Civil Rights Act of 1964.
+
+				In a participatory approach, everyone with a stake in the design intervention can influence the outcome through collaboration with practitioners and researchers; it is designing "with" rather than designing "for." 
+
+				
+
 			</div>
 				<div class="column ">
-				We made this website in response to the growing needs among researchers and practitioners implanting participatory approaches. We hope that the timeline, groceries, and other resources help existing and future experts learn the evolution of participatory approaches. To explore the essence of collaborative works, we also documented and opened the process of collaborations as a resource for future collaborative projects. Please feel free to download and use these resources.
+				This project examines key individuals, organizations, projects, writings, and social/cultural events across five decades and disciplines — community design, youth development, international development, public health, and technology development — to reveal key connections as well as the changing historical context of the work.
+
+				Project outcomes include an interactive timeline, downloadable posters, and downloadable data sets, all available under a Creative Commons license.
+
+				For a window into our research and design development process, see our blog at {URL to come}.
 			</div>
 			</div>
 			
