--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -51,7 +51,7 @@
 		<div id="intro" class="parallaxSec">
 
 			<div class="columnimg"> 
-				<img src="images/Homepage_logo_12.1.14.png">
+				<img src="images/Homepage_logo.png">
 			</div>	
 				
 			<div id="introText"> 
