--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -5,7 +5,7 @@
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="snap.svg-min.js"></script>
-	<script src=".min.js"></script>
+	<!--<script src=".min.js"></script>-->
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<title>DiPi Portal</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
