Fixed popupDiv cross-browser width issues

--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -19,6 +19,8 @@
 <body>
 
 	<nav class="shadow_bottom">
+
+	<div id="navContainer">
 		<div id="titleContainer">
 			<h1><a href="#" id="title">What Does Democratic Design Look Like?</a></h1>
 		</div>
@@ -44,6 +46,8 @@
 			<li><a href="#" id="cdev">community</a></li>
 
 		</ul>
+	</div>
+		
 	</nav>
 
 	<div id="content">
@@ -81,36 +85,37 @@
 
 		<div id="popupDiv" class="parallaxSec shadow_top">
 
-			<div id="col1" class="column">
-				<h2 class="details name" id="name">Name</h2>
-				<h6 class="details" id="years">1960-1980</h6>
-				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
-			</div>
+				<div id="col1" class="column">
+					<h2 class="details name" id="name">Name</h2>
+					<h6 class="details" id="years">1960-1980</h6>
+					<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
+				</div>
 
-			<div class="column ">
-				<h4>Introduction</h4>
-				<span id="aboutPerson"></span>
-			</div>
+				<div class="column ">
+					<h4>Introduction</h4>
+					<span id="aboutPerson"></span>
+				</div>
 			
-			<div id="col2" class="column ">
-				<h4>Quotes</h4>
-				<span id="quotes"></span>
-				<h4>Connections</h4>
-				<span id="connections"></span>
-			</div>
+				<div id="col2" class="column ">
+					<h4>Quotes</h4>
+					<span id="quotes"></span>
+					<h4>Connections</h4>
+					<span id="connections"></span>
+				</div>
 
-			<div id="col3" class="column ">
-				<h4>Key Publications</h4>
-				<span id="publications"></span>
-				<h4>Reference</h4>
-				
-			</div>
-			<div class="column " id="col4">
-				<span class="name hovered" id="close"><img src="images/arrow.png"></span>
-				<span id="globe">
-					<img src="">
-				</span>
-			</div>	
+				<div id="col3" class="column ">
+					<h4>Key Publications</h4>
+					<span id="publications"></span>
+					<h4>Reference</h4>
+					
+				</div>
+				<div class="column " id="col4">
+					<span class="name hovered" id="close"><img src="images/arrow.png"></span>
+					<span id="globe">
+						<img src="">
+					</span>
+				</div>	
+			
 
 		</div>
 	
